Commented test methods and repaired undo and redo